# myst-sphinx-gallery

./: .gitignore  .pre-commit-config.yaml  LICENSE  MANIFEST.in  README.md  README.rst  pyproject.toml
.github/workflows/: pre-commit.yml  python-publish.yml  tests.yml
docs/: Makefile  requirements.txt
docs/source/: conf.py  examples.rst  index.rst
docs/source/_static/: custom.css
docs/source/_static/css/: custom.css  gallery.css
docs/source/about/: acknowledgement.rst  index.rst
docs/source/about/changelog/: index.rst  v0.2.0.rst  v0.2.2.rst  v0.3.0.rst
docs/source/api/: config.rst  directive.rst  gallery.rst  images.rst  index.rst
docs/source/auto_examples/alt_strategy/: image_url_md.md  image_url_md_image.md  image_url_nb.ipynb  image_url_rst.rst  index.rst
docs/source/changelog/: index.rst  v0.2.0.rst  v0.2.1.rst
docs/source/contributing/: index.rst
docs/source/examples/: index.rst
docs/source/examples/alt/: index.rst  md conventional image.md  md figure.md  md image.md  nb conventional image.ipynb  nb figure.ipynb  nb image.ipynb  rst figure.rst  rst image.rst
docs/source/examples/code_markdown/: first code.ipynb  first markdown.ipynb  index.md  last code.ipynb  last markdown.ipynb  markdown alt.ipynb
docs/source/examples/default/: index.rst  no_image.rst
docs/source/examples/first_last/: first.rst  index.md  last.rst
docs/source/examples/ref_gallery/: code_ref.rst  rst_ref.rst
docs/source/user_guide/: config.rst  cross_reference.rst  custom.rst  example_structure.rst  index.rst  multi_galleries.rst  order.rst  quick_start.rst  thumb.rst
docs/source/user_guide/gen_gallery/: index.rst
docs/source/user_guide/gen_gallery/conf/: cross_reference.rst  index.rst  setup_galleries.rst
docs/source/user_guide/gen_gallery/directive/: index.rst
examples/: GALLERY_HEADER.rst  index.rst
examples/00-alt/: GALLERY_HEADER.rst  nb.ipynb  rst.rst
examples/00-alt_order/: 03-image_url_md_order..md
examples/00-alt_strategy_order/: 03-image_url_md.md  GALLERY_HEADER.rst  index.rst
examples/01-alt/: GALLERY_HEADER.rst  image_url_md_image.md  image_url_nb.ipynb  image_url_rst.rst
examples/01-alt_order/: 01-rst_order.rst  03-md_order.md  GALLERY_HEADER.rst
examples/01-alt_strategy/: image_url_md_image.md  image_url_nb.ipynb  image_url_rst.rst  index.rst
examples/02-first_last/: GALLERY_HEADER.rst  image_url_rst_fl.rst  last.rst
examples/02-first_last_strategy/: GALLERY_HEADER.rst  image_url_md.md  image_url_nb.ipynb  image_url_rst.rst  index.rst
examples/code_markdown/: GALLERY_HEADER.rst  plot_image.ipynb
examples/code_markdown_strategy/: GALLERY_HEADER.rst  index.rst  plot_image.ipynb
examples/default/: GALLERY_HEADER.rst  no_image.rst
examples1/: GALLERY_HEADER.rst
examples1/00-alt/: GALLERY_HEADER.rst
examples1/01-alt_order/: GALLERY_HEADER.rst
examples1/code_markdown/: GALLERY_HEADER.rst  plot_image_code.ipynb
examples1/default/: GALLERY_HEADER.rst
examples1/mini_gallery/: mini_gallery.rst
examples2/: GALLERY_HEADER.rst
examples2/01-first_last2/: GALLERY_HEADER.rst  first.rst
examples3/: GALLERY_HEADER.rst  md3.md
examples3/grid/: GALLERY_HEADER.rst  no_image3.rst  rst3.rst
myst_sphinx_gallery/: __init__.py  config.py  directives.py  gallery.py  gen_gallery.py  grid.py  images.py  io_tools.py  patterns.py  sphinx_ext.py  utils.py
myst_sphinx_gallery/_static/: myst_sphinx_gallery.css
tests/: test_config.py  test_gallery.py  test_gen_gallery.py  test_grid.py  test_image.py  test_io_tools.py  test_load_image.py  test_sphinx_ext.py  test_thumbnail.py  test_utils.py  tests_env.yml
tests/data/examples/: GALLERY_HEADER.rst
tests/data/examples/combination/: GALLERY_HEADER.rst  plot_image_markdown.ipynb
